<resources>


    <string name="title_activity_main">E-book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- Activity titles -->
    <string name="app_name">Edutech-Reader</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <string name="ac_name_complex">Complex Example</string>
    <!-- Labels -->
    <string name="label_examples">Examples</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">PHOTOS</string>
    <string name="button_image_grid_gif">GIF</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <string name="button_video_gallery">Videos</string>
    <string name="button_music_gallery">Audios</string>
    <string name="button_list_and_grid">ViewPager (ListView + GridView)</string>
    <string name="title_list">List</string>
    <string name="title_grid">Grid</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>

    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>


    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_image_scrolling">ImageScrollingActivity</string>
    <string name="version">1.6 (git build)</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="toggle_reflow_mode">Toggle reflow mode</string>

    <string name="open_failed">Unable to open the document</string>
    <string name="helpPutSign">Double-tap where you want to place your signature</string>
    <string name="noSignOnPdfTitle">Warning</string>
    <string name="noSignOnPdf">The document has not been signed. Please, double-tap where you want to place your signature</string>
    <string name="OkKey">Ok</string>
    <string name="wiki">WiKi Search</string>
    <string name="translate">Translator</string>
    <string name="action_menu_item">Menu Items</string>
    <string name="title_activity_login">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_web_view_video">WebViewActivityVideo</string>
    <string name="title_activity_view_pdf">ViewPdfActivity</string>
    <string name="shareTitle"> Dont Misss this awesome and very usefull application also do share with your friends</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="chooser_title">Select file to open</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
